k8s/bet-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bet-service
spec:
  selector:
    app: bet-service
  ports:
  - port: 3002
    targetPort: 3002
