k8s/odds-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odds-api
spec:
  selector:
    app: odds-api
  ports:
  - port: 3000
    targetPort: 3000
