k8s/wallet-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-service
spec:
  selector:
    app: wallet-service
  ports:
  - port: 3001
    targetPort: 3001
